--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.63.4",
+    "sass-loader": "^13.3.2"
   }
 }
